# ytb-downloader

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/ytb_downloader/: __init__.py  __main__.py  cli.py  config.py  downloader.py  gui.py  history.py  installer.py  interactive.py  main.py  models.py  preferences.py  utils.py
