[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytb-downloader"
version = "0.1.0"
description = "Downloader modular de audio e video com CLI, modo interativo e GUI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "CarlosTMJ", email = "carlostmj2019@gmail.com" },
]
keywords = ["youtube", "downloader", "yt-dlp", "mp3", "mp4", "gui", "cli"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "yt-dlp>=2026.2.10",
]

[project.urls]
Homepage = "https://github.com/carlostmj/ytb-downloader"
Repository = "https://github.com/carlostmj/ytb-downloader"
Issues = "https://github.com/carlostmj/ytb-downloader/issues"

[project.optional-dependencies]
gui = []

[project.scripts]
ytb-downloader = "ytb_downloader.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
